test/corpus/comments.txt
================================================================================
Comments
================================================================================

# this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment in namespace
================================================================================

namespace eval ::ns {
    # command
}

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)
      (braced_word
        (comment))))
