test/corpus/test.txt

================================================================================
Commands
================================================================================

echo "hello"

set hi "heelo"

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (quoted_word)))
  (set
    (id)
    (quoted_word)))

================================================================================
Procedures
================================================================================

proc foo {arg1 arg2} {
    echo "hello"
    echo "word$hi \$bye word"
}

--------------------------------------------------------------------------------

(source_file
  (procedure
    (simple_word)
    (arguments
      (argument
        (simple_word))
      (argument
        (simple_word)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (quoted_word)))
      (command
        (simple_word)
        (word_list
          (quoted_word
            (variable_substitution
              (id))
            (escaped_character)))))))

================================================================================
Comments
================================================================================

# this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Foreach
================================================================================

foreach a {1 2 3 4 5} {
    put $i
}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (simple_word)
     (braced_word
       (command
         (simple_word)
         (word_list
           (simple_word)
           (simple_word)
           (simple_word)
           (simple_word))))
    (braced_word
      (command
        (simple_word)
        (word_list
          (variable_substitution
            (id)))))))

================================================================================
Conditionals
================================================================================

if $hello {
    echo hi
} elseif $hello {
    echo hi
} elseif {$openindex==-1} {
    # comment
} else {
    echo bye
}



--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (variable_substitution
        (id)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (simple_word))))
    (elseif
      (expr
        (variable_substitution
          (id)))
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))
    (elseif
        (expr
        (binop_expr
            (variable_substitution
            (id))))
        (braced_word
        (comment)))
    (else
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))))

================================================================================
Command substitution
================================================================================

puts [puts hello]

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (command_substitution
        (command
          (simple_word))
            (command
              (simple_word))))))

================================================================================
Escaped string
================================================================================

echo "word$hi \$bye word"

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (quoted_word
        (variable_substitution
          (id))
        (escaped_character)))))

================================================================================
Slash in string
================================================================================

set dir $build_dir/subdir

--------------------------------------------------------------------------------

(source_file
  (set
    (id)
      (variable_substitution
        (id))
      (simple_word)))

================================================================================
Curly in string
================================================================================

set v $a{b}

--------------------------------------------------------------------------------

(source_file
  (set
    (id)
      (variable_substitution
        (id))
      (braced_word_simple
        (simple_word))))


================================================================================
Regexp
================================================================================

regexp {\d} $var m b

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
        (escaped_character))
    (variable_substitution
      (id))
    (simple_word)
    (simple_word)))


================================================================================
Expr 'in'
================================================================================

if {$foo in {"basic"}} {}

if {{foo} in {basic}} {}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (braced_word_simple
          (quoted_word))))
        (braced_word))
      (conditional
        (expr
          (binop_expr
            (braced_word_simple
              (simple_word))
            (braced_word_simple
              (simple_word))))
    (braced_word)))

================================================================================
Expr eq and &&
================================================================================

expr {$var eq "sec" && $bar}

--------------------------------------------------------------------------------

(source_file
  (expr_cmd
    (expr
      (binop_expr
        (binop_expr
          (variable_substitution
            (id))
          (quoted_word))
        (variable_substitution
          (id))))))

================================================================================
Expr subcommand brackets
================================================================================

expr {[string length $foo]+1}

--------------------------------------------------------------------------------

(source_file
 (expr_cmd
    (expr
      (binop_expr
        (command_substitution
          (command
            (simple_word))
          (command
            (simple_word))
          (command
            (variable_substitution
              (id))))))))

================================================================================
Expr signed
================================================================================

set x [expr {-123 + +456 - 789}]

--------------------------------------------------------------------------------

(source_file
  (set
    (id)
    (command_substitution
      (expr_cmd
        (expr
          (binop_expr
            (binop_expr)))))))

================================================================================
Set array
================================================================================

set foo($i) 1

--------------------------------------------------------------------------------

(source_file
  (set
    (id)
    (array_index
      (variable_substitution
        (id)))
    (simple_word)))


================================================================================
Namespace id
================================================================================

set a $::var
set a $::var::sub

--------------------------------------------------------------------------------

(source_file
  (set (id) (variable_substitution (id)))
  (set (id) (variable_substitution (id)))
)

================================================================================
Empty statement block
================================================================================

if {1} {
}

if {1} {
}


--------------------------------------------------------------------------------
(source_file
  (conditional
    (expr)
    (braced_word))
  (conditional
    (expr)
    (braced_word))
)


================================================================================
Command with no terminator
================================================================================

baz {foo}

baz {foo
foo}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word)))))
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word))
        (command
          (simple_word))))))

================================================================================
Command with trailing terminator
================================================================================

baz {
    aa
    ;
}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word))))))

================================================================================
Command with middle terminator
================================================================================

baz {
    aa
    ;
    aa
}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word))
        (command
          (simple_word))))))

================================================================================
Comment in namespace
================================================================================

namespace eval ::ns {
    # command
}

--------------------------------------------------------------------------------

(source_file
  (namespace
    (simple_word)
      (braced_word
        (comment))))
